fixing the overflow-x hidden, by tagging the html tag, other than body tag

--- a/2_styleCSS/style.css
+++ b/2_styleCSS/style.css
@@ -5,8 +5,11 @@
     font-family: 'poppins', sans-serif;
 }
 
-body {
+html, body {
     overflow-x: hidden;
+}
+
+body {
     /*background-color: rgb(35, 12, 23);*/
     background: #2A0134;
     color:white;
